# liminal

./: .gitignore  Cargo.toml  README.md  justfile  research.md  yatr.toml
.github/workflows/: ci.yml
examples/cross-dex-arb/: decoder.wasm  enricher.wasm  pipeline.toml  sink-json.wasm
examples/cross-dex-arb/dashboard/: index.html
examples/cross-dex-arb/decoder/: Cargo.toml
examples/cross-dex-arb/decoder/src/: lib.rs
examples/cross-dex-arb/enricher/: Cargo.toml
examples/cross-dex-arb/enricher/src/: lib.rs
examples/cross-dex-arb/sink-json/: Cargo.toml
examples/cross-dex-arb/sink-json/src/: lib.rs
examples/cross-dex-arb/types/: Cargo.toml
examples/cross-dex-arb/types/src/: lib.rs
examples/customs/: AUDIT.md  README.md  RFC.md  customs.live.pipeline.toml  customs.pipeline.toml  customs.pipeline.toml.sig  customs.pub  decoder.wasm  docker-compose.yml  enricher.wasm  run.sh  screener-http.wasm  screener.wasm  sink-hold.wasm  sink-kafka.wasm  sink-quarantine.wasm  sink-sor.wasm
examples/customs/decoder/: Cargo.toml
examples/customs/decoder/src/: lib.rs
examples/customs/enricher/: Cargo.toml
examples/customs/enricher/src/: lib.rs
examples/customs/fixtures/: sanctioned.json
examples/customs/screener/: Cargo.toml
examples/customs/screener-http/: Cargo.toml
examples/customs/screener-http/src/: lib.rs
examples/customs/screener/src/: lib.rs
examples/customs/screening-server/: Cargo.toml
examples/customs/screening-server/src/: main.rs
examples/customs/sink-hold/: Cargo.toml
examples/customs/sink-hold/src/: lib.rs
examples/customs/sink-kafka/: Cargo.toml
examples/customs/sink-kafka/src/: lib.rs
examples/customs/sink-quarantine/: Cargo.toml
examples/customs/sink-quarantine/src/: lib.rs
examples/customs/sink-sor/: Cargo.toml
examples/customs/sink-sor/src/: lib.rs
examples/customs/types/: Cargo.toml
examples/customs/types/src/: lib.rs
examples/uni-v3-swaps/: decoder.wasm  pipeline.toml  price-enricher.wasm  sink-kafka.wasm  sink-postgres.wasm
examples/uni-v3-swaps/decoder/: Cargo.toml
examples/uni-v3-swaps/decoder/src/: lib.rs
examples/uni-v3-swaps/price-enricher/: Cargo.toml
examples/uni-v3-swaps/price-enricher/src/: lib.rs
examples/uni-v3-swaps/sink-kafka/: Cargo.toml
examples/uni-v3-swaps/sink-kafka/src/: lib.rs
examples/uni-v3-swaps/sink-postgres/: Cargo.toml
examples/uni-v3-swaps/sink-postgres/src/: lib.rs
examples/uni-v3-swaps/types/: Cargo.toml
examples/uni-v3-swaps/types/src/: lib.rs
liminal-host/: Cargo.toml
liminal-host/src/: arb_bindings.rs  arb_pipeline.rs  bindings.rs  compose.rs  dashboard.rs  http_policy.rs  kv_host.rs  main.rs  manifest.rs  node_bindings.rs  pipeline.rs  runtime.rs  source.rs
liminal-host/tests/: customs_e2e.rs
liminal-sdk/: Cargo.toml
liminal-sdk/src/: lib.rs
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: host.ts  kv.js  main.ts  style.css  transfers.jsonl
wit/: world.wit
