[workspace]
members = [
    "liminal-host",
    "liminal-sdk",
    "examples/uni-v3-swaps/types",
    "examples/uni-v3-swaps/decoder",
    "examples/uni-v3-swaps/price-enricher",
    "examples/uni-v3-swaps/sink-postgres",
    "examples/uni-v3-swaps/sink-kafka",
    "examples/cross-dex-arb/types",
    "examples/cross-dex-arb/decoder",
    "examples/cross-dex-arb/enricher",
    "examples/cross-dex-arb/sink-json",
    "examples/customs/types",
    "examples/customs/decoder",
    "examples/customs/screener",
    "examples/customs/screener-http",
    "examples/customs/enricher",
    "examples/customs/sink-sor",
    "examples/customs/sink-kafka",
    "examples/customs/sink-quarantine",
    "examples/customs/sink-hold",
    "examples/customs/screening-server",
]
# `cargo build` (no target) builds only the natively-linkable crates. The
# component crates are cdylibs with WIT exports that only link for wasm32-wasip2,
# so they're built explicitly via the justfile / target flag, never by default.
default-members = [
    "liminal-host",
    "liminal-sdk",
    "examples/uni-v3-swaps/types",
    "examples/cross-dex-arb/types",
    "examples/customs/types",
    "examples/customs/screening-server",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wasmtime = { version = "44", features = ["component-model", "async"] }
wasmtime-wasi = "44"
wasmtime-wasi-http = "44"
wit-bindgen = { version = "0.57", default-features = false, features = ["macros"] }
alloy = { version = "2", features = ["full"] }
alloy-sol-types = "1"
alloy-primitives = "1"
