[package]
name = "liminal-host"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "liminal"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
wasmtime-wasi-http = { workspace = true }
alloy = { workspace = true }
clap = { version = "4", features = ["derive"] }
