[package]
name = "arb-decoder"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { workspace = true }
liminal-sdk = { path = "../../../liminal-sdk" }
arb-types = { path = "../types" }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
