[package]
name = "customs-screener-http"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# The live screener: calls an origin-scoped screening provider over wasi:http,
# caches verdicts in the namespaced kv store, and fails closed on any error.
[dependencies]
wit-bindgen = { workspace = true }
liminal-sdk = { path = "../../../liminal-sdk" }
customs-types = { path = "../types" }
serde_json = { workspace = true }
wasi = "0.14"
