[package]
name = "uni-v3-decoder"
version = "0.2.0"
edition = "2021"

# Compiles to a WASIp2 component. Build with: cargo build --target wasm32-wasip2
[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { workspace = true }
liminal-sdk = { path = "../../../liminal-sdk" }
uni-types = { path = "../types" }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
