[package]
name = "uni-v3-price-enricher"
version = "0.1.0"
edition = "2021"

# Build with: cargo build --target wasm32-wasip2 --release
[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { workspace = true }
# JSON parsing inside the Wasm component — no_std-compatible.
serde = { workspace = true }
serde_json = { workspace = true }

[package.metadata.component]
package = "liminal:price-enricher"
