[package]
name = "uni-v3-price-enricher"
version = "0.1.0"
edition = "2021"

# Build with: cargo build --target wasm32-wasip2 --release
[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# WASI 0.2 bindings — provides wasi::http for outbound HTTP inside the component.
# The host grants this capability only to the enricher linker; no other component
# in the pipeline can reach the network.
wasi = "0.14"

[package.metadata.component]
package = "liminal:price-enricher"
